--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>RI NEMBA</h1>
-        <p></p>
+        <p>Hi there</p>
 
 
         <p class="view"><a href="https://github.com/rinemba">View My GitHub Profile</a></p>
