--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
-layout: page
+layout: home
+title: NEMBA – Rhode Island Chapter
 ---
 
-<section class="posts">
-  {% for post in site.posts %}
-    <article>
-      <a href="{{ post.url }}">
-          <h2>
-            {{ post.title }}
-          </h2>
-      </a>
-          {% if post.excerpt %}
-            <p class="excerpt">{{ post.excerpt }}</p>
-          {% endif %}
-          <p class="time-stamp">{{ post.date | date_to_string }}</p>
-    </article>
-  {% endfor %}
-</section>
+{% for post in site.posts %}
+  <article>
+    <a href="{{ post.url }}">
+        <h2>
+          {{ post.title }}
+        </h2>
+    </a>
+        {% if post.excerpt %}
+          <p class="excerpt">{{ post.excerpt }}</p>
+        {% endif %}
+        <p class="time-stamp">{{ post.date | date_to_string }}</p>
+  </article>
+{% endfor %}
+
