--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@ title: NEMBA – Rhode Island Chapter
 {% for post in site.posts %}
   <article>
     <a href="{{ post.url }}">
-        <h2>
-          {{ post.title }}
-        </h2>
+      <h2>
+        {{ post.title }}
+      </h2>
     </a>
-        {% if post.excerpt %}
-          <p class="excerpt">{{ post.excerpt }}</p>
-        {% endif %}
-        <p class="time-stamp">{{ post.date | date_to_string }}</p>
+    <div class="excerpt">
+      {% if post.excerpt %}
+        {{ post.excerpt }}
+      {% endif %}
+    </div>
+    <!-- <p class="time-stamp">{{ post.date | date_to_string }}</p> -->
   </article>
 {% endfor %}
 
